--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en" trgLang="en">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="nl" trgLang="en">
   <file id="messages.en">
     <unit id="7uFjkBg" name="home.offline.heading">
       <notes>
@@ -64,7 +64,6 @@
     <unit id="PLnHN8J" name="youtubeVideo.table.name">
       <notes>
         <note category="file-source" priority="1">templates/admin/youtube_video/index.html.twig:29</note>
-        <note category="state" priority="1">new</note>
       </notes>
       <segment>
         <source>youtubeVideo.table.name</source>
@@ -74,7 +73,6 @@
     <unit id="AeXi3nM" name="youtubeVideo.table.duration">
       <notes>
         <note category="file-source" priority="1">templates/admin/youtube_video/index.html.twig:31</note>
-        <note category="state" priority="1">new</note>
       </notes>
       <segment>
         <source>youtubeVideo.table.duration</source>
@@ -84,7 +82,6 @@
     <unit id="60SYSjx" name="youtubeVideo.table.created">
       <notes>
         <note category="file-source" priority="1">templates/admin/youtube_video/index.html.twig:32</note>
-        <note category="state" priority="1">new</note>
       </notes>
       <segment>
         <source>youtubeVideo.table.created</source>
@@ -217,9 +214,19 @@
         <target>Profile image</target>
       </segment>
     </unit>
+    <unit id="XdjmwSf" name="site.navbar.title">
+      <notes>
+        <note category="file-source" priority="1">templates/base.html.twig:8</note>
+        <note category="state" priority="1">new</note>
+      </notes>
+      <segment>
+        <source>site.navbar.title</source>
+        <target></target>
+      </segment>
+    </unit>
     <unit id="qQ0clFV" name="site.navbar.logout">
       <notes>
-        <note category="file-source" priority="1">templates/base.html.twig:7</note>
+        <note category="file-source" priority="1">templates/base.html.twig:15</note>
       </notes>
       <segment>
         <source>site.navbar.logout</source>
@@ -228,7 +235,7 @@
     </unit>
     <unit id="HvyHuCV" name="site.navbar.login">
       <notes>
-        <note category="file-source" priority="1">templates/base.html.twig:16</note>
+        <note category="file-source" priority="1">templates/base.html.twig:24</note>
       </notes>
       <segment>
         <source>site.navbar.login</source>
@@ -315,7 +322,6 @@
       <notes>
         <note category="file-source" priority="1">src/Form/YoutubeVideoType.php:20</note>
         <note category="file-source" priority="1">src/Form/YoutubeCategoryType.php:16</note>
-        <note category="state" priority="1">new</note>
       </notes>
       <segment>
         <source>name</source>
@@ -325,7 +331,6 @@
     <unit id="yqea9Nt" name="duration">
       <notes>
         <note category="file-source" priority="1">src/Form/YoutubeVideoType.php:21</note>
-        <note category="state" priority="1">new</note>
       </notes>
       <segment>
         <source>duration</source>
@@ -335,7 +340,6 @@
     <unit id="DKsclhd" name="video">
       <notes>
         <note category="file-source" priority="1">src/Form/YoutubeVideoType.php:22</note>
-        <note category="state" priority="1">new</note>
       </notes>
       <segment>
         <source>video</source>
@@ -345,7 +349,6 @@
     <unit id="7bLNO3T" name="category">
       <notes>
         <note category="file-source" priority="1">src/Form/YoutubeVideoType.php:23</note>
-        <note category="state" priority="1">new</note>
       </notes>
       <segment>
         <source>category</source>
@@ -355,7 +358,6 @@
     <unit id="pOBd36x" name="seqnr">
       <notes>
         <note category="file-source" priority="1">src/Form/YoutubeCategoryType.php:17</note>
-        <note category="state" priority="1">new</note>
       </notes>
       <segment>
         <source>seqnr</source>
@@ -402,16 +404,6 @@
         <target>Roles</target>
       </segment>
     </unit>
-    <unit id="tITgZsF" name="site.menu.home">
-      <notes>
-        <note category="file-source" priority="1">src/Menu/Site/HomeMenuListener.php:30</note>
-        <note priority="1">src/Menu/Site/HomeMenuListener.php:34</note>
-      </notes>
-      <segment>
-        <source>site.menu.home</source>
-        <target>Home</target>
-      </segment>
-    </unit>
     <unit id="j3Dt6Fk" name="admin.menu.translations">
       <notes>
         <note category="file-source" priority="1">src/Menu/Admin/TranslatorMenuListener.php:36</note>
@@ -435,7 +427,6 @@
     <unit id="zrMmUpR" name="admin.menu.youtube_video">
       <notes>
         <note category="file-source" priority="1">src/Menu/Admin/YoutubeMenuListener.php:26</note>
-        <note category="state" priority="1">new</note>
       </notes>
       <segment>
         <source>admin.menu.youtube_video</source>
@@ -445,7 +436,6 @@
     <unit id="znRgOPU" name="admin.menu.youtube_category">
       <notes>
         <note category="file-source" priority="1">src/Menu/Admin/YoutubeMenuListener.php:30</note>
-        <note category="state" priority="1">new</note>
       </notes>
       <segment>
         <source>admin.menu.youtube_category</source>
@@ -460,6 +450,16 @@
       <segment>
         <source>admin.menu.users</source>
         <target>Users</target>
+      </segment>
+    </unit>
+    <unit id="tITgZsF" name="site.menu.home">
+      <notes>
+        <note priority="1">src/Menu/Site/HomeMenuListener.php:34</note>
+        <note category="state" priority="1">obsolete</note>
+      </notes>
+      <segment>
+        <source>site.menu.home</source>
+        <target>Home</target>
       </segment>
     </unit>
     <unit id="d9wWGUE" name="users.table.username">
